--- a/style.css
+++ b/style.css
@@ -119,8 +119,99 @@ main {
 }
 
 .how-we-work-container {
-  height: 260px;
+  /* height: 260px; */
   width: 100%;
   display: flex;
-  background-color: rebeccapurple;
+  background-color: hsl(256, 26%, 20%);
+  justify-content: space-between;
+  padding: 50px 90px;
+  align-items: center;
+  margin-top: 110px;
+  color: white;
+}
+
+/* title */
+.how-we-work-container h1 {
+  /* background-color: yellow; */
+  font-size: 60px;
+}
+
+/* button */
+.how-we-work-container button {
+  /* background-color: green; */
+  /* padding: 10px 30px; */
+  border: none;
+  padding: 15px 35px;
+  font-size: 16px;
+  /* margin-top: 30px; */
+  height: 20%;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+/* ****************************************************************** */
+.contact-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 200px;
+  margin-top: 150px;
+}
+
+footer img {
+  height: 25%;
+}
+
+.contact-icons:hover {
+  color: yellow;
+}
+
+.company-pages-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  /* padding: 0 200px; */
+}
+
+.page-group {
+  margin-top: 70px;
+  text-transform: uppercase;
+}
+.page-group > h3 {
+  margin-bottom: 50px;
+}
+
+.page-group ul li {
+  list-style-type: none;
+  line-height: 30px;
+}
+.page-group ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+}
+.page-group ul li a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+
+/* ************************************************** */
+footer {
+  padding: 0 200px;
+  position: relative;
+  margin-bottom: 100px;
+}
+
+footer .socials-container {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer .social-icon {
+  margin: 5px;
+  opacity: 50%;
+}
+
+footer .social-icon:hover {
+  opacity: 100%;
 }
