--- a/style.css
+++ b/style.css
@@ -99,56 +99,18 @@ hr {
 /* *************************************************************** */
 
 main {
-  margin-top: 200px;
   padding: 0 200px;
-  height: 100vh;
 }
 
-.main-text-title {
-  font-size: 70px;
-  padding-top: 70px;
-  padding-bottom: 80px;
-}
-
-.main-company-qualities-container {
-  display: flex;
-}
-
-.main-icon {
-  margin-bottom: 30px;
-}
-
-.how-we-work-container {
-  /* height: 260px; */
-  width: 100%;
-  display: flex;
-  background-color: hsl(256, 26%, 20%);
-  justify-content: space-between;
-  padding: 50px 90px;
-  align-items: center;
-  margin-top: 110px;
-  color: white;
-}
-
-/* title */
-.how-we-work-container h1 {
-  /* background-color: yellow; */
+main .title {
   font-size: 60px;
 }
 
-/* button */
-.how-we-work-container button {
-  /* background-color: green; */
-  /* padding: 10px 30px; */
-  border: none;
-  padding: 15px 35px;
-  font-size: 16px;
-  /* margin-top: 30px; */
-  height: 20%;
-  text-transform: uppercase;
-  cursor: pointer;
+main .box {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  margin-top: 50px;
 }
-
 /* ****************************************************************** */
 .contact-container {
   display: flex;
